--- a/rating_system/web/index.html
+++ b/rating_system/web/index.html
@@ -51,6 +51,9 @@
     firebase.initializeApp(firebaseConfig);
   </script>
 
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
+  </script>
 
   <script>
     // The value below is injected by flutter build, do not touch.
